jobber med å fikse lagre problemet

--- a/battle.html
+++ b/battle.html
@@ -315,6 +315,12 @@ winnerPokemon(pokemon);
          // window.location.reload();
         }
       }
+
+      function saveToLocal(pokemon) {
+
+      }
+
+      
     </script>
   </body>
 </html>
