her skal jeg fikse localstorage lagring, og fjernet tekst

--- a/battle.html
+++ b/battle.html
@@ -21,22 +21,22 @@
     <div class="info-container">
       <div class="txt-container">
         <p>Squirtle</p>
-        <p id="squirtle-hp-txt">44 / 44 HP</p>
-        <p id="squirtle-level-txt">0 / 36 Level</p>
-        <p id="squirtle-money-txt">0 penger</p>
+        <p id="squirtle-hp-txt">HP</p>
+        <p id="squirtle-level-txt">Level</p>
+        <p id="squirtle-money-txt">Penger</p>
       </div>
       <div class="txt-container">
         <p>Vulpix</p>
-        <p id="vulpix-hp-txt">38 / 38 HP</p>
-        <p id="vulpix-level-txt">0 / 20 Level</p>
-        <p id="vulpix-money-txt">0 Penger</p>
+        <p id="vulpix-hp-txt">HP</p>
+        <p id="vulpix-level-txt">Level</p>
+        <p id="vulpix-money-txt">Penger</p>
       </div>
 
       <div class="txt-container">
         <p>Pikachu</p>
-        <p id="pikachu-hp-txt">35 / 35 HP</p>
-        <p id="pikachu-level-txt">0 / 20 Level</p>
-        <p id="pikachu-money-txt">0 Penger</p>
+        <p id="pikachu-hp-txt">HP</p>
+        <p id="pikachu-level-txt">Level</p>
+        <p id="pikachu-money-txt">Penger</p>
       </div>
     
     <img
