la til setitem localstorage og oppdaterer innerhtml

--- a/battle.html
+++ b/battle.html
@@ -317,7 +317,10 @@ winnerPokemon(pokemon);
       }
 
       function saveToLocal(pokemon) {
-
+        localStorage.setItem("pokemonGood", JSON.stringify(pokemonGood));
+        localStorage.setItem("pokemonBad", JSON.stringify(pokemonBad));
+        updateInnerHtml(pokemon);
+        updateInnerHtml(pokemonBad[0]);
       }
 
       
