--- a/battle.html
+++ b/battle.html
@@ -317,6 +317,10 @@ winnerPokemon(pokemon);
       }
 
       function saveToLocal(pokemon) {
+        pokemon.hp = pokemon.originalHp; 
+        if(pokemonBad[0].name === "pikachu") {
+          pokemonBad[0].hp = pokemonBad[0].originalHp;
+        }
         localStorage.setItem("pokemonGood", JSON.stringify(pokemonGood));
         localStorage.setItem("pokemonBad", JSON.stringify(pokemonBad));
         updateInnerHtml(pokemon);
