samme logikk som squirtle og vulpix

--- a/battle.html
+++ b/battle.html
@@ -93,6 +93,7 @@
 
       async function fetchAndShowBadPokemon(pikachu) {
         try {
+          const savedPikachu = pokemonGood.find(pokemon => pokemon.name === "pikachu");
           pokemonsId = [];
           
          idOfPokemon = await fetchBattlePokemon(pikachu);
