skrev navnet wartortle feil, derfor det ikke funket, fungerer nå

--- a/battle.html
+++ b/battle.html
@@ -294,7 +294,7 @@ winnerPokemon(pokemon);
       
       function evolvePokemon(pokemon) {
         if (pokemon.name === "squirtle" && pokemon.level === 15) {
-          fetchAndShowPokemon("wartotle")
+          fetchAndShowPokemon("wartortle")
           console.log("evolve", pokemon);
           console.log("evolve", pokemonGood)
        
