lager en else if der den oppgraderes til blastoise, skal gjøre det samme nå for vulpix og pikachu

--- a/battle.html
+++ b/battle.html
@@ -294,12 +294,16 @@ winnerPokemon(pokemon);
       
       function evolvePokemon(pokemon) {
         if (pokemon.name === "squirtle" && pokemon.level === 15) {
+          updateInnerHtml(pokemon);
+          pokemon.level -= 15;
+          alert("Du har oppnådd en ny pokemon med navn wartortle")
           fetchAndShowPokemon("wartortle")
           console.log("evolve", pokemon);
           console.log("evolve", pokemonGood)
-       
-      }
-    }
+      } else if (pokemon.name === "wartortle" && pokemon.level === 20) {
+        fetchAndShowPokemon("blastoise");
+      }  
+     }
 
       function winnerPokemon(pokemon) {
         updateInnerHtml(pokemon);
