gjør det samme med vulpix, men ser at det kan bli problemer med sletting, kan være jeg må ta filter for å finne riktig pokemon som skal slettes

--- a/battle.html
+++ b/battle.html
@@ -342,7 +342,6 @@ attackBtn.remove();
           //else if med penger??
           //alert med pokemon.name?
           pokemonGood.splice(0, 1);
-          //pokemonBad.push("raichu")
           localStorage.setItem("pokemonGood", JSON.stringify(pokemonGood));
           alert("Du har oppnådd en ny pokemon med navn wartortle");
           fetchAndShowPokemon("wartortle");
@@ -360,6 +359,8 @@ attackBtn.remove();
           updateInnerHtml(pokemon);
           pokemon.level -= 20;
           pokemon.money -= 300;
+          pokemonGood.splice(0, 1);
+          localStorage.setItem("pokemonGood", JSON.stringify(pokemonGood));
           alert("Du har funnet fire stone og har nå tilgan til ninetales");
           fetchAndShowPokemon("ninetales");
         }
