bare fortsetter med litt av det samme som ble gjort med squirtle for ay wartortle skal vises, hvis den er i array

--- a/battle.html
+++ b/battle.html
@@ -223,6 +223,12 @@
         } else {
           fetchAndShowPokemon("squirtle");
         }
+        let savedWartortle = pokemonGood.find(
+          (pokemon) => pokemon.name === "wartortle"
+        );
+        if (savedWartortle) {
+          showGoodPokemon([savedWartortle]);
+        }
       });
       vulpix.addEventListener("click", () => {
         vulpix.src = "/assets/open.jpg";
